--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
 :root {
-  --primary-color: #a855f7;
-  --primary-color-dark: #9333ea;
+  --primary-color: #5f8beb;
+  --primary-color-dark: #2644ee;
   --secondary-color: #ca8a04;
   --text-dark: #1f2937;
   --text-light: #6b7280;
@@ -45,7 +45,7 @@ nav {
 nav .logo a {
   font-size: 1.5rem;
   font-weight: 600;
-  color: var(--primary-color);
+  color:black;
   transition: 0.3s;
 }
 nav .logo a:hover {
@@ -216,4 +216,17 @@ ul li a:hover {
   .action__btns {
     margin: auto;
   }
+
+  #header .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+.info-box {
+    color: #444444;
+    padding: 20px;
+    width: 100%;
+    background: #09203a;
+  }
+  
 }
