--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   --secondary-color: #ca8a04;
   --text-dark: #1f2937;
   --text-light: #6b7280;
-  --extra-light: #faf5ff;
+  --extra-light: #d0e5f3;;
   --max-width: 1200px;
 }
 
